--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Contect From</title>
 </head>
 <body>
-    <form action="mail.php" method="post">
+    <form action="./mail.php" method="post">
         <input type="text" name="name" placeholder="What is your Name:" required>
         <input type="text" name="emailAddress" id="emailAddress" placeholder="Email Address" required>
         <button type="submit">Submit</button>
